used height: 100vh to fix spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,6 @@
-html {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-}
-
 .App {
+  height: 100vh;
+  background-color: rgb(0, 118, 194);
 }
 
 ul {
@@ -17,7 +9,7 @@ ul {
 
 h1 {
   color: rgb(246, 246, 246);
-  margin: 10px 0px 0px 20px;
+  margin: 10px 0px 20px 20px;
 }
 
 h2 {
@@ -98,7 +90,7 @@ ul p {
 .addCardText {
   color: rgb(135, 147, 151);
   padding: 0px;
-  margin: 15px 0px 0px 10px;
+  margin: 15px 0px 0px 0px;
 }
 
 .cardTitleText {
